src/app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@500;600;700&display=swap");

html {
  scroll-behavior: smooth;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Kanit", sans-serif;
  background-color: #141410;

}

/* ------------------ Scrollbar */
::-webkit-scrollbar {
  width: 4px;
  height: 4px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px var(--theme-bg);
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #c9f31d;
  border-radius: 10px;
}

/* ----------------- Common css */
@media (min-width: 0px) {
  .container {
    padding: 0 12px;
  }
}

@media (min-width: 576px) {
  .container {
    max-width: 540px;
    margin: 0 auto;
    padding: 0 12px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 720px;
    margin: 0 auto;
    padding: 0 12px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 960px;
    margin: 0 auto;
    padding: 0 12px;
  }
}

@media (min-width: 1200px) {
  .container {
    max-width: 1350px;
    margin: 0 auto;
    padding: 0 12px;
  }
}

.pt_120 {
  padding-top: 120px;
}

.pb_120 {
  padding-bottom: 120px;
}

@media (max-width: 1280px) {
  .pt_120 {
    padding-top: 100px;
  }

  .pb_120 {
    padding-bottom: 100px;
  }
}

@media (max-width: 1024px) {
  .pt_120 {
    padding-top: 80px;
  }

  .pb_120 {
    padding-bottom: 80px;
  }
}

/* ----------------- Clip pth  */
.clip_bg {
  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
}

/* -------------- Animation text */
.designers {
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: white;
  color: transparent;
  transition: all 0.5s;
  position: relative;
}

.designers::before {
  content: attr(data-text);
  position: absolute;
  color: #c9f31d;
  width: 0px;
  overflow: hidden;
  animation: pulse-width 3s ease-in infinite;
  -webkit-text-stroke-width: 1px;
  -webkit-text-stroke-color: #c9f31d;
}

@keyframes pulse-width {
  50% {
    width: 100%;
  }
}

/* -------------------- slider dote */
.swiper-pagination3 {
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  gap: 18px;
  justify-content: flex-end;
  margin: 20px -20px;
}

.swiper-pagination3 .swiper-pagination-bullet {
  background: #ffffff;
  width: 8px;
  height: 8px;
  opacity: 1;
  position: relative;
}

.swiper-pagination3 .swiper-pagination-bullet-active {
  background: #c9f31d;
  padding: 2px;
  width: 8px;
  height: 8px;
  position: relative;
  opacity: 1;
}

.swiper-pagination-bullet-active::before {
  position: absolute;
  top: -6px;
  left: -6px;
  width: 20px;
  height: 20px;
  content: "";
  border: 1px solid #c9f31d !important;
  border-radius: 50%;
}

.swiper-pagination3 .swiper-pagination-bullet::before {
  position: absolute;
  top: -6px;
  left: -6px;
  width: 20px;
  height: 20px;
  content: "";
  border: 1px solid #ffffff;
  border-radius: 50%;
}

